--- a/.github/workflows/mongodb-service.yml
+++ b/.github/workflows/mongodb-service.yml
@@ -2,13 +2,12 @@ name: Update Resources
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-  steps:
-    uses: actions/checkout@v2
-    run: echo "Hello World!"
+    steps:
+      uses: actions/checkout@v2
+      run: echo Hello World!
