--- a/.github/workflows/mongodb-service.yml
+++ b/.github/workflows/mongodb-service.yml
@@ -9,5 +9,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      uses: actions/checkout@v2
-      run: echo Hello World!
+      - uses: actions/checkout@v2
+
+      - run: echo Hello World!
