--- a/.github/workflows/mongodb-service.yml
+++ b/.github/workflows/mongodb-service.yml
@@ -11,4 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: echo Hello World!
+      - run: |
+      echo Hello World!
+      wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc | sudo apt-key add -
