--- a/.github/workflows/mongodb-service.yml
+++ b/.github/workflows/mongodb-service.yml
@@ -13,4 +13,5 @@ jobs:
 
       - run: |
       echo Hello World!
-      wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc | sudo apt-key add -
+      wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc
+      sudo apt-key add -
