--- a/.github/workflows/mongodb-service.yml
+++ b/.github/workflows/mongodb-service.yml
@@ -13,5 +13,6 @@ jobs:
 
       - run: |
       echo Hello World!
+      sudo apt-get install gnupg
       wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc
       sudo apt-key add -
