--- a/.github/workflows/mongodb-service.yml
+++ b/.github/workflows/mongodb-service.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Test
         run: |
           echo Hello World!
-          wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc | sudo apt-key add -
+          lsb_release -a
