--- a/.github/workflows/mongodb-service.yml
+++ b/.github/workflows/mongodb-service.yml
@@ -10,7 +10,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
 
       - name: Test
         run: |
@@ -19,3 +18,4 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y mongodb-org
           sudo systemctl start mongod
+          sudo systemctl status mongod
