--- a/.github/workflows/mongodb-service.yml
+++ b/.github/workflows/mongodb-service.yml
@@ -11,16 +11,24 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Test
+      - name: Download and Install MongoDB
         run: |
           wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc | sudo apt-key add -
           echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/5.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-5.0.list
           sudo apt-get update
           sudo apt-get install -y mongodb-org
+
+      - name: Start MongoDB
+        run: |
           sudo systemctl start mongod
           sudo systemctl status mongod
 
+      - uses: ./src@main
+      - name: Run Commands
+        run: |
           mongosh "${{ secrets.MONGODB_CONNECTION_STRING }}"
-          load("/src/resources.js")
+          load("./resources.js")
 
+      - name: Stop MongoDB
+        run: |
           sudo systemctl stop mongod
