--- a/.github/workflows/mongodb-service.yml
+++ b/.github/workflows/mongodb-service.yml
@@ -23,10 +23,10 @@ jobs:
           sudo systemctl start mongod
           sudo systemctl status mongod
 
-      - name: Run Commands
+      - name: Run Script
         run: |
           mongosh "${{ secrets.MONGODB_CONNECTION_STRING }}"
-          load("./github/workspace/src/resources.js")
+          load('./github/workspace/src/resources.js')
 
       - name: Stop MongoDB
         run: |
