--- a/.github/workflows/mongodb-service.yml
+++ b/.github/workflows/mongodb-service.yml
@@ -14,4 +14,5 @@ jobs:
 
       - run: npm install
       - run: npm run-script run
-        env: ${{ secrets.MONGODB_CONNECTION_STRING }}
+        env: 
+          MONGODB_CONNECTION_STRING: ${{ secrets.MONGODB_CONNECTION_STRING }}
