--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/nanoblox/website#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "mongodb": "^4.1.0"
+    "mongodb": "^4.1.0",
+    "redis": "^3.1.2"
   }
 }
