--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "mongodb": "^4.1.0",
+    "node-fetch": "^2.6.1",
     "redis": "^3.1.2"
   }
 }
